Made stylistic choices and fixed clear_page()

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,19 @@
 include setup.mk
 
-SRC=$(wildcard *.c)
+SRC = $(wildcard *.c)
 
-DDIR=$(PROJ_DIR)/include
-DEPS=$(patsubst %.c, $(DDIR)/%.h, $(SRC))
+DDIR = $(PROJ_DIR)/include
+DEPS = $(patsubst %.c, $(DDIR)/%.h, $(SRC))
 
-ODIR=$(PROJ_DIR)/obj
-OBJ=$(patsubst %.c, $(ODIR)/%.o, $(SRC))
+ODIR = $(PROJ_DIR)/obj
+OBJ = $(patsubst %.c, $(ODIR)/%.o, $(SRC))
 
-CC=gcc
-DEBUG=-g
-IDIR=-I$(DDIR)
-CFLAGS+=$(DEBUG) -DTEMP_DIR=\"$(PROJ_DIR)/tmp/\" -Wall -O2 -fPIC 
-LDFLAGS+=-lncurses -lm
-BIN=nuget
+CC = gcc
+DEBUG = -g #-Werror -DDEBUG
+IDIR = -I$(DDIR)
+CFLAGS += $(DEBUG) -DTEMP_DIR=\"$(PROJ_DIR)/tmp/\" -Wall -Wextra -O2
+LDFLAGS += -lncurses -lm -lc
+BIN := nuget
 
 all: $(OBJ)
 	$(CC) -o $(BIN) $^ $(LDFLAGS) $(CFLAGS)
@@ -22,6 +22,5 @@ $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(IDIR) $(CFLAGS) 
 
 .PHONY: clean
-
 clean: 
 	rm -f $(BIN) $(ODIR)/*.o
